# LearningJupyter

./: pyproject.toml
caso_practico/: converted_predict_app.py
models/: converted-model.pck
notebooks/: CasoPractico.ipynb
tests/: test_caso_practico.py
