[tool.poetry]
name = "caso-practico"
version = "0.1.0"
description = ""
authors = ["Rafael Alamanac <rafaelalamanac@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
scipy = "^1.8"
scikit-learn = "^1.0.1"
pandas = "^1.3.4"
ipykernel = "^6.4.2"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
